# CinemaFlix

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  run_server.py  start-backend.cmd
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  movies.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: bootstrap.py  mongodb.py
backend/app/schemas/: auth.py  movie.py  user.py
backend/app/services/: seed.py
backend/scripts/: seed_movies.py
frontend/: index.html  package-lock.json  package.json  start-frontend.cmd
frontend/src/: App.jsx  styles.css
frontend/src/components/: AuthCard.jsx  ImageWithFallback.jsx  MovieCard.jsx  MovieModal.jsx  TopNav.jsx
frontend/src/lib/: api.js  images.js
frontend/src/pages/: AuthPage.jsx  HomePage.jsx  MyListPage.jsx  RentalsPage.jsx  ShoppingPage.jsx
ui designs/cinematic_immersive/: DESIGN.md
ui designs/home_cinemaflix/: code.html
ui designs/login_cinemaflix/: code.html
ui designs/register_cinemaflix/: code.html
